# azerbaijani

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/azerbaijani/: config.py  detect.py  test.py
src/tests/: test_detect.py
