[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azerbaijani"
version = "0.1.0"
authors = [
  { name="Jafar Isbarov", email="cefer.isbarov@gmail.com" },
]
description = "Utility package for Azerbaijani"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ceferisbarov/azerbaijani"
Issues = "https://github.com/ceferisbarov/azerbaijani/issues"
